--- a/css/new_style.css
+++ b/css/new_style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "FontAwesome", sans-serif !important;
+}
+
 .top_nav {
     width: 70%;
     background-color: #2388db;
@@ -11,9 +15,8 @@
 .nav_item {
     display: inline-block;
     margin-right: 2em;
-    font-size: 16px;
+    font-size: 18px;
     text-transform: uppercase;
-    font-weight: 900;
     text-decoration: none;
     color: #fff;
     white-space: nowrap;
