--- a/css/new_style.css
+++ b/css/new_style.css
@@ -2,20 +2,28 @@ body {
     font-family: "FontAwesome", sans-serif !important;
 }
 
+.top_header {
+    background: url('../images/s2-bg.jpg') no-repeat center center fixed #333;
+    background-size: cover;
+}
+
 .top_nav {
-    width: 70%;
-    background-color: #2388db;
+    width: 100%;
     margin: 30px auto 0 auto;
 }
 
+.header_date {
+    padding: 2em;
+}
+
 .logo {
-    height: 80px;
+    height: 120px;
 }
 
 .nav_item {
     display: inline-block;
     margin-right: 2em;
-    font-size: 18px;
+    font-size: 20px;
     text-transform: uppercase;
     text-decoration: none;
     color: #fff;
@@ -28,6 +36,22 @@ body {
     right: 10px;
 }
 
+.social {
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    text-decoration: none;
+    vertical-align: bottom;
+}
+
+.twitter {
+    background: url("../images/soc.png") 40px 40px;
+}
+
+.facebook {
+    background: url("../images/soc.png") 0 40px;
+}
+
 .sticky {
     position: fixed;
     width: 100%;
@@ -37,7 +61,11 @@ body {
     border-top: 0;
     margin: 0;
     padding: 30px;
+    padding-bottom: 40px;
+    background: url('../images/s2-bg.jpg') no-repeat center center fixed #333;
+    background-size: cover;
 }
+
 
 @media (max-width: 768px) {
     .nav_item {
