--- a/css/new_style.css
+++ b/css/new_style.css
@@ -2,6 +2,10 @@ body {
     font-family: "FontAwesome", sans-serif !important;
 }
 
+/*
+ Top Header
+*/
+
 .top_header {
     background: url('../images/s2-bg.jpg') no-repeat center center fixed #333;
     background-size: cover;
@@ -66,11 +70,91 @@ body {
     background-size: cover;
 }
 
+/*
+ Speakers section
+*/
 
-@media (max-width: 768px) {
+.speakers {
+    color: black;
+}
+
+.speakers_header {
+    font-size: 27px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #1f419b;
+    padding: 20px 0;
+    border-top: 1px solid #e3e3e3;
+    border-bottom: 1px solid #e3e3e3;
+    margin: 30px 0;
+    display: inline-block;
+}
+
+.speakers_wrapper {
+    width: 1000px;
+    margin: 30px auto;
+    text-align: left;
+}
+
+.speaker_wrapper {
+    cursor: pointer;
+    min-height: 120px;
+    width: 480px;
+    vertical-align: top;
+    display: inline-block;
+    position: relative;
+    margin-bottom: 40px;
+    margin-left: 20px;
+}
+
+.speaker_wrapper:hover > .speaker_photo {
+    transform: scale(1.1, 1.1);
+}
+
+.speaker_photo {
+    position: absolute;
+    width: 114px;
+    height: 114px;
+    left: 0;
+    top: -25px;
+    border: 3px solid #f1e249;
+    border-radius: 100%;
+    transition: transform .1s ease-out;
+}
+
+.speaker_info {
+    margin-bottom: 0;
+    padding-left: 140px;
+    padding-right: 10px;
+    text-align: left;
+}
+
+.speaker_name {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.speaker_theme {
+    font-size: 22px;
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: #d0212a;
+}
+
+
+@media (max-width: 800px) {
     .nav_item {
-        display: block;
         width: 100%;
         padding: 15px;
+    }
+
+    .speakers_wrapper {
+        width: 100%;
+    }
+
+    .speaker_wrapper {
+        display: block;
+        width: 90%;
     }
 }
