--- a/css/new_style.css
+++ b/css/new_style.css
@@ -2,6 +2,10 @@ body {
     font-family: "FontAwesome", sans-serif !important;
 }
 
+a {
+    text-decoration: none;
+}
+
 /*
  Top Header
 */
@@ -29,7 +33,6 @@ body {
     margin-right: 2em;
     font-size: 20px;
     text-transform: uppercase;
-    text-decoration: none;
     color: #fff;
     white-space: nowrap;
 }
@@ -44,7 +47,6 @@ body {
     width: 40px;
     height: 40px;
     display: inline-block;
-    text-decoration: none;
     vertical-align: bottom;
 }
 
@@ -142,6 +144,82 @@ body {
     color: #d0212a;
 }
 
+/* Popups */
+
+.overlay {
+    position: fixed;
+    background-color: rgba(0,0,0, 0.2);
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+.popup {
+    max-width: 40%;
+    max-height: 60%;
+    padding: 2em;
+    position: fixed;
+    z-index: 9999;
+    display: none;
+    overflow: auto;
+    border: 3px solid #999;
+    box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4);
+    background-color: #fff;
+    text-align: center;
+}
+
+.popup .speaker_wrapper {
+    width: 90%;
+    margin-bottom: 0;
+}
+
+.popup p {
+    font-size: 18px;
+    margin: 10px 0;
+    text-align: justify;
+}
+
+.speaker_wrapper_popup {
+    min-height: 120px;
+    width: 480px;
+    vertical-align: top;
+    display: inline-block;
+    position: relative;
+    margin-left: 20px;
+}
+
+.speaker_links {
+    margin: 5px 0;
+    font-size: 16px;
+}
+
+.speaker_twitter:hover {
+    text-decoration: underline;
+}
+
+.speaker_sponsor:hover {
+    text-decoration: underline;
+}
+
+.speaker_twitter {
+    text-transform: lowercase;
+}
+
+.popup_close {
+    display: block;
+    position: absolute;
+    font-size: 60px;
+    top: 22px;
+    right: 22px;
+    line-height: 44px;
+    height: 48px;
+    width: 48px;
+    text-align: center;
+    cursor: pointer;
+    color: #909090;
+}
+
 
 @media (max-width: 800px) {
     .nav_item {
@@ -156,5 +234,9 @@ body {
     .speaker_wrapper {
         display: block;
         width: 90%;
+    }
+
+    .popup {
+        max-width: 90%;
     }
 }
