--- a/css/new_style.css
+++ b/css/new_style.css
@@ -156,6 +156,18 @@ a {
     height: 100%;
     display: none;
 }
+
+.overlay_mobile_menu {
+    position: fixed;
+    background-color: rgba(0,0,0, 0.2);
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    z-index: 10;
+}
+
 .popup {
     max-width: 40%;
     max-height: 60%;
@@ -222,6 +234,75 @@ a {
     display: block;
 }
 
+.top_nav_mobile {
+    display: none;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 100;
+    border-top: 0;
+    margin: 0;
+    padding: 30px;
+    padding-bottom: 40px;
+    background: url('../images/s2-bg.jpg') no-repeat center center fixed #333;
+    background-size: cover;
+}
+
+.hamburger {
+    cursor: pointer;
+    height: 24px;
+    padding: 3px 4px 3px;
+    width: 25px;
+}
+
+.hamburger div {
+    background-color: #fff;
+    border: 1px solid #eee;
+    border-radius: 2px 2px 2px 2px;
+    height: 2px;
+    margin-top: 3px;
+    width: 90%;
+}
+
+.mobile_menu {
+    display: none;
+    width: 40%;
+    left: 0;
+    top: 0;
+    position: fixed;
+    z-index: 9999;
+    height: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background: #3e3c3d;
+}
+
+/*
+Style the navigation menu
+*/
+
+.mobile_menu a {
+    color: #fff;
+    text-decoration: none;
+    position: relative;
+    font-size: 1em;
+    font-weight: bold;
+    border-bottom: 1px solid #222222;
+    border-top: 1px solid #444444;
+    padding: 15px;
+}
+
+.mobile_menu .social {
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    vertical-align: bottom;
+}
+
 @media (max-width: 1040px) {
     .speaker_photo {
         position: static;
@@ -235,13 +316,9 @@ a {
 
 
 @media (max-width: 900px) {
-    .top_nav {
-        padding: 7px;
-    }
 
     .nav_item {
         width: 100%;
-        font-size: 16px;
         padding: 5px;
     }
 
@@ -252,11 +329,15 @@ a {
 
     .speaker_wrapper {
         display: block;
-        width: 90%;
+        width: 100%;
     }
 
     .speaker_info {
         text-align: center;
+    }
+
+    .speaker_photo {
+        margin-left: 0;
     }
 
     .popup {
