--- a/css/new_style.css
+++ b/css/new_style.css
@@ -330,6 +330,7 @@ Style the navigation menu
     .speaker_wrapper {
         display: block;
         width: 100%;
+        margin-left: 0;
     }
 
     .speaker_info {
