--- a/css/new_style.css
+++ b/css/new_style.css
@@ -145,11 +145,17 @@ a {
     color: #d0212a;
 }
 
+.aboutText {
+    width: 60%;
+    margin: 0 auto;
+    text-align: justify;
+}
+
 /* Popups */
 
 .overlay {
     position: fixed;
-    background-color: rgba(255,255,255, 0.2);
+    background-color: rgba(255,255,255, 0);
     top:0;
     left:0;
     width: 100%;
@@ -379,6 +385,7 @@ Style the navigation menu
     .popup p {
         text-align: center;
     }
+
 }
 
 @media (max-width: 380px) {
