--- a/css/new_style.css
+++ b/css/new_style.css
@@ -83,6 +83,7 @@ a {
 
 .speakers {
     color: black;
+    padding-bottom: 40px;
 }
 
 .speakers_header {
@@ -93,20 +94,28 @@ a {
     padding: 40px 0;
 }
 .speakers_header:before {
-    content: "~ ";
+    content: "• ";
 }
 .speakers_header:after {
-    content: " ~";
+    content: " •";
 }
 
 .speakers_wrapper {
     text-align: center;
 }
+.community,
+.speaker_wrapper {
+    cursor: pointer;
+    vertical-align: top;
+    display: inline-block;
+    margin: 40px 20px;
+    text-align: left;
+}
 
 .speaker_wrapper {
     cursor: pointer;
     min-height: 120px;
-    width: 320px;
+    width: 400px;
     vertical-align: top;
     display: inline-block;
     margin: 40px 20px;
@@ -126,14 +135,16 @@ a {
 
 .speaker_wrapper .meta {
     display: inline-block;
-    vertical-align: bottom;
-    margin: 0 0 0 10px;
+    vertical-align: top;
+    max-width: 265px;
+    margin: 9px 0 0 10px;
 }
-.speaker_wrapper .meta .twitter,
-.speaker_wrapper .meta .community {
-    display: block;
-    font-size: 18px;
+.speaker_wrapper .meta a {
+    font-size: 16px;
     line-height: 30px;
+    background: transparent;
+    color: #1f419b;
+    font-weight: bold;
 }
 
 .speaker_info {
@@ -143,14 +154,13 @@ a {
 .speaker_name {
     font-size: 20px;
     font-weight: 700;
+    line-height: 10px;
 }
 
 .speaker_theme {
     font-size: 22px;
     font-weight: 700;
-    margin-top: 0;
-    margin-bottom: 0;
-    color: #d0212a;
+    margin-top: 10px;
 }
 
 .aboutText {
@@ -191,7 +201,7 @@ a {
     display: none;
     overflow: auto;
     border: 3px solid #999;
-    box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 1px 17px 9px rgba(0, 0, 0, 0.4);
     background-color: #fff;
     text-align: center;
 }
@@ -245,16 +255,35 @@ a {
 }
 
 .section-13 {
-    background: #fff;
+    background: #777;
 }
 
-.imaguru {
+.mail_ru {
     width: 50%;
     z-index: 10;
 }
 
+.when-block .main-caption {
+    color: #ffa930;
+}
+
 .place {
-    background: #3788c8;
+    background: #168de2;
+}
+
+.section-3 {
+    padding: 40px 40px 80px;
+    background: #171717;
+}
+
+.section-3 .main-caption {
+    padding: 20px 0;
+    text-align: center;
+}
+.section-3 .text {
+    margin: 30px 0;
+    font-size: 120%;
+    line-height: 144%;
 }
 
 .active {
@@ -332,6 +361,11 @@ Style the navigation menu
 
 .communities {
     color: black;
+    background-color: #f4f4f4;
+}
+
+.communities .community {
+    width: 300px;
 }
 
 .communities .speaker_wrapper {
