--- a/css/style.css
+++ b/css/style.css
@@ -658,7 +658,7 @@ a:active{
     border-bottom: 1px solid #ffa896;
 }
 
-.imaguru{
+.mail_ru{
     position: relative;
     display: block;
     width: auto;
