--- a/css/style.css
+++ b/css/style.css
@@ -1221,3 +1221,29 @@ a:active{
         margin-bottom: 15px;
     }
 }
+
+/*
+    Twitter feed styles
+*/
+
+#twitter_container {
+    width: 100%;
+    height: 100%;
+    background: #333;
+    overflow: hidden;
+}
+
+iframe[id^='twitter-widget-'] {
+    width: 100% !important;
+    height: 100% !important;
+    min-height: 100% !important;
+    min-width: initial !important;
+    max-width: initial !important;
+    max-height: initial !important;
+}
+
+a.twitter-timeline {
+    border-radius: 0 !important;
+}
+
+
