--- a/css/style.css
+++ b/css/style.css
@@ -1226,11 +1226,11 @@ a:active{
     Twitter feed styles
 */
 
+
 #twitter_container {
     width: 100%;
-    height: 100%;
-    background: #333;
-    overflow: hidden;
+    height: 90%;
+    margin: 0 auto;
 }
 
 iframe[id^='twitter-widget-'] {
@@ -1242,8 +1242,12 @@ iframe[id^='twitter-widget-'] {
     max-height: initial !important;
 }
 
-a.twitter-timeline {
-    border-radius: 0 !important;
+.logo a {
+    display: block;
+    width: 206px;
+    height: 90px;
+    margin: 1em auto;
+    background: url('../images/logo-full.png');
 }
 
 
