--- a/css/style.css
+++ b/css/style.css
@@ -1231,6 +1231,7 @@ a:active{
     width: 100%;
     height: 90%;
     margin: 0 auto;
+    max-width: 980px;
 }
 
 iframe[id^='twitter-widget-'] {
